test/corpus/values.txt
================================================================================
values
================================================================================

INTEGER_VALUE = 1234
NEGATIVE_INTEGER_VALUE = -1234

FLOAT =  1234.23
FLOAT =   -1234.23

HEX = 0xff00ff

BOOL_VALUE = true
BOOL_VALUE = false

--------------------------------------------------------------------------------

(document
 (assignment
  key: (identifier)
  value: (number 
    (integer)))
 (assignment
  key: (identifier)
  value: (number 
      (integer)))
 (assignment
  key: (identifier)
  value: (number 
      (float)))
 (assignment
  key: (identifier)
  value: (number 
      (float)))
 (assignment
  key: (identifier)
  value: (number 
      (hexadecimal)))
 (assignment
  key: (identifier)
  value: (boolean))
 (assignment
  key: (identifier)
  value: (boolean)))
